--- a/getting-starter/index.html
+++ b/getting-starter/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="src/css/global.css">
   <link rel="stylesheet" href="src/css/style.css">
   <link rel="stylesheet" href="src/css/loading.css">
+  <link rel="stylesheet" href="src/css/modal.css">
 
   <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/shift-away.css"/>
 
@@ -59,17 +60,32 @@
           <div class="generate-url"></div>
         </div>
       </main>
-      <footer><span data-text="text_create_by"></span> <a href="https://github.com/andremalveira" target="_blank"> @andremalveira</a></footer>
+      <footer>
+        <div class="l-side">
+          <div class="ssl-seal">
+            <span><i id="CloudFill" color="#f6821f" style="margin-top:2px" size="18"></i>CloudFlare SSL</span>
+            <span style="color:#1ff498"><i id="LockFill"></i> https://</span>
+          </div>
+        </div>
+        <div class="center">
+          <span data-text="text_create_by"></span> 
+          <a href="https://github.com/andremalveira" target="_blank"> @andremalveira</a>
+        </div>
+        <div class="r-side">
+
+        </div>
+      </footer>
     </div>
   </section>
 
   <script>loading.auto(document.body)</script>
-  <!-- Production -->
+
   <script src="src/js/lib/tippy/popper.js"></script>
   <script src="src/js/lib/tippy/tippy.js"></script>
   <script src="src/i18n/translate.js"></script>
   <script src="src/js/lib/bootstrap.icons.js"></script>
   <script src="src/js/lib/astronaut.table.js"></script>
+  <script src="src/js/lib/modal.js"></script>
   <script src="src/js/script.js"></script>
   <script src="src/js/generate.url.js"></script>
 </body>
