--- a/getting-starter/index.html
+++ b/getting-starter/index.html
@@ -1,3 +1,5 @@
+<!-- Author: https://github.com/andremalveira -->
+<!-- Created in May 2022 -->
 <!DOCTYPE html>
 <html lang="en" theme="dark">
 <head>
@@ -32,6 +34,7 @@
           </div>
         </div>
         <div class="r-side">
+          <a href="https://github.com/andremalveira/sharin.gq" target="_blank" id="GithubIcon" size="20"></a>
           <div id="IconTranslate" size="20"></div>
         </div>
       </header>
@@ -72,7 +75,7 @@
           <a href="https://github.com/andremalveira" target="_blank"> @andremalveira</a>
         </div>
         <div class="r-side">
-
+          
         </div>
       </footer>
     </div>
