--- a/getting-starter/index.html
+++ b/getting-starter/index.html
@@ -14,6 +14,23 @@
   <link rel="stylesheet" href="src/css/loading.css">
   <link rel="stylesheet" href="src/css/modal.css">
 
+  <meta name="description"              content="Custom preview link to share">
+  <!-- meta to shared --> 
+  <meta property="og:site_name"         content="sharin.gq"> 
+  <!-- FACEBOOK -->
+  <meta property="og:url"               content="https://sharin.gq">
+  <meta property="og:title"             content="Sharin">
+  <meta property="og:description"       content="Custom preview link to share">
+  <meta property="og:image"             content="src/img/banner.jpg">
+
+
+  <!-- TWITTER -->
+  <meta name="twitter:title"            content="Sharin">
+  <meta name="twitter:description"      content="Custom preview link to share">
+  <meta name="twitter:image:src"        content="src/img/banner.jpg">
+  <meta name="twitter:card"             content="summary_large_image">
+
+
   <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/shift-away.css"/>
 
   <script src="src/js/lib/loading.js"></script>
