--- a/getting-starter/index.html
+++ b/getting-starter/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="apple-mobile-web-app-capable" content="yes">
-
+  <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon">
   <title>sharin.gq</title>
 
   <link rel="stylesheet" href="src/css/variables.css">
