url input check is https

--- a/getting-starter/index.html
+++ b/getting-starter/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon">
-  <title>sharin.gq</title>
+  <title>Sharin | Custom preview link to share</title>
 
   <link rel="stylesheet" href="src/css/variables.css">
   <link rel="stylesheet" href="src/css/global.css">
