--- a/getting-starter/index.html
+++ b/getting-starter/index.html
@@ -23,13 +23,13 @@
   <meta property="og:url"               content="https://sharin.gq">
   <meta property="og:title"             content="Custom preview link to share">
   <meta property="og:description"       content="Share your links without metadata with sharin, with it you add custom metadata to show in your link preview.">
-  <meta property="og:image"             content="src/img/banner.jpg">
+  <meta property="og:image"             content="https://sharin.gq/getting-starter/src/img/banner.jpg">
 
 
   <!-- TWITTER -->
   <meta name="twitter:title"            content="Custom preview link to share">
   <meta name="twitter:description"      content="Share your links without metadata with sharin, with it you add custom metadata to show in your link preview.">
-  <meta name="twitter:image:src"        content="src/img/banner.jpg">
+  <meta name="twitter:image:src"        content="https://sharin.gq/getting-starter/src/img/banner.jpg">
   <meta name="twitter:card"             content="summary_large_image">
 
 
