--- a/getting-starter/index.html
+++ b/getting-starter/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon">
-  <title>Sharin | Custom preview link to share</title>
+  <title>Sharin | Pré visualização de link personalizado</title>
 
   <link rel="stylesheet" href="src/css/variables.css">
   <link rel="stylesheet" href="src/css/global.css">
@@ -16,19 +16,19 @@
   <link rel="stylesheet" href="src/css/loading.css">
   <link rel="stylesheet" href="src/css/modal.css">
 
-  <meta name="description"              content="Share your links without metadata with sharin, with it you add custom metadata to show in your link preview.">
+  <meta name="description"              content="Compartilhe seus links sem metadados com o sharin, com ele você adiciona metadados personalizados para mostrar na visualização do seu link.">
   <!-- meta to shared --> 
   <meta property="og:site_name"         content="sharin.gq"> 
   <!-- FACEBOOK -->
   <meta property="og:url"               content="https://sharin.gq">
-  <meta property="og:title"             content="Custom preview link to share">
-  <meta property="og:description"       content="Share your links without metadata with sharin, with it you add custom metadata to show in your link preview.">
+  <meta property="og:title"             content="Pré visualização de link personalizado">
+  <meta property="og:description"       content="Compartilhe seus links sem metadados com o sharin, com ele você adiciona metadados personalizados para mostrar na visualização do seu link.">
   <meta property="og:image"             content="https://sharin.gq/getting-starter/src/img/banner.jpg">
 
 
   <!-- TWITTER -->
-  <meta name="twitter:title"            content="Custom preview link to share">
-  <meta name="twitter:description"      content="Share your links without metadata with sharin, with it you add custom metadata to show in your link preview.">
+  <meta name="twitter:title"            content="Pré visualização de link personalizado">
+  <meta name="twitter:description"      content="Compartilhe seus links sem metadados com o sharin, com ele você adiciona metadados personalizados para mostrar na visualização do seu link.">
   <meta name="twitter:image:src"        content="https://sharin.gq/getting-starter/src/img/banner.jpg">
   <meta name="twitter:card"             content="summary_large_image">
 
@@ -97,8 +97,8 @@
           </div>
         </div>
         <div class="center">
-          <span data-text="text_create_by"></span> 
-          <a href="https://github.com/andremalveira" target="_blank"> @andremalveira</a>
+          <!-- <span data-text="text_create_by"></span>  -->
+          <!-- <a href="https://github.com/andremalveira" target="_blank"> @andremalveira</a> -->
         </div>
         <div class="r-side">
           
