--- a/getting-starter/index.html
+++ b/getting-starter/index.html
@@ -2,6 +2,7 @@
 <!-- Created in May 2022 -->
 <!DOCTYPE html>
 <html lang="en" theme="dark">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,29 +17,42 @@
   <link rel="stylesheet" href="src/css/loading.css">
   <link rel="stylesheet" href="src/css/modal.css">
 
-  <meta name="description"              content="Compartilhe seus links sem metadados com o sharin, com ele você adiciona metadados personalizados para mostrar na visualização do seu link.">
-  <!-- meta to shared --> 
-  <meta property="og:site_name"         content="sharin.gq"> 
+  <meta name="description"
+    content="Compartilhe seus links sem metadados com o sharin, com ele você adiciona metadados personalizados para mostrar na visualização do seu link.">
+  <!-- meta to shared -->
+  <meta property="og:site_name" content="sharin.gq">
   <!-- FACEBOOK -->
-  <meta property="og:url"               content="https://sharin.gq">
-  <meta property="og:title"             content="Pré visualização de link personalizado">
-  <meta property="og:description"       content="Compartilhe seus links sem metadados com o sharin, com ele você adiciona metadados personalizados para mostrar na visualização do seu link.">
-  <meta property="og:image"             content="https://sharin.gq/getting-starter/src/img/banner.jpg">
+  <meta property="og:url" content="https://sharin.gq">
+  <meta property="og:title" content="Pré visualização de link personalizado">
+  <meta property="og:description"
+    content="Compartilhe seus links sem metadados com o sharin, com ele você adiciona metadados personalizados para mostrar na visualização do seu link.">
+  <meta property="og:image" content="https://sharin.gq/getting-starter/src/img/banner.jpg">
 
 
   <!-- TWITTER -->
-  <meta name="twitter:title"            content="Pré visualização de link personalizado">
-  <meta name="twitter:description"      content="Compartilhe seus links sem metadados com o sharin, com ele você adiciona metadados personalizados para mostrar na visualização do seu link.">
-  <meta name="twitter:image:src"        content="https://sharin.gq/getting-starter/src/img/banner.jpg">
-  <meta name="twitter:card"             content="summary_large_image">
+  <meta name="twitter:title" content="Pré visualização de link personalizado">
+  <meta name="twitter:description"
+    content="Compartilhe seus links sem metadados com o sharin, com ele você adiciona metadados personalizados para mostrar na visualização do seu link.">
+  <meta name="twitter:image:src" content="https://sharin.gq/getting-starter/src/img/banner.jpg">
+  <meta name="twitter:card" content="summary_large_image">
 
 
-  <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/shift-away.css"/>
+  <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/shift-away.css" />
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4SGTJFE2HD"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-4SGTJFE2HD');
+  </script>
 
   <script src="src/js/lib/loading.js"></script>
 </head>
+
 <body>
-  
+
   <section id="home">
     <div class="container">
       <header>
@@ -60,24 +74,28 @@
       </header>
       <main>
         <label data-text="text_url_example"></label>
-        <div id="url-example">https://sharin.gq?<bg><b9cdcfe id="title_params_u">u</b9cdcfe>=https://site.com<span id="title_params_e">&</span><b9cdcfe id="title_params_t">t</b9cdcfe>=title</bg></div>
+        <div id="url-example">https://sharin.gq?<bg>
+            <b9cdcfe id="title_params_u">u</b9cdcfe>=https://site.com<span id="title_params_e">&</span>
+            <b9cdcfe id="title_params_t">t</b9cdcfe>=title
+          </bg>
+        </div>
         <div id="params-table"></div>
 
         <form action="" class="generateurl">
           <div class="row">
             <div class="col">
               <div class="row">
-                <input data-name="form_t" type="text" >
-                <input data-name="form_sn" type="text" >
+                <input data-name="form_t" type="text">
+                <input data-name="form_sn" type="text">
               </div>
               <div id="urlInput">
                 <input data-name="form_u" type="text" required>
                 <div class="input-error"></div>
               </div>
-              <input data-name="form_i" type="text" >
+              <input data-name="form_i" type="text">
             </div>
             <div class="col">
-              <textarea data-name="form_d" ></textarea>
+              <textarea data-name="form_d"></textarea>
             </div>
           </div>
           <div class="row" style="padding-bottom: 0;">
@@ -101,7 +119,7 @@
           <!-- <a href="https://github.com/andremalveira" target="_blank"> @andremalveira</a> -->
         </div>
         <div class="r-side">
-          
+
         </div>
       </footer>
     </div>
@@ -120,4 +138,5 @@
 
 
 </body>
+
 </html>
